<resources>
    <string name="app_name">TaskTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email .....</string>
    <string name="enter_your_pass">Enter Your Password .....</string>
    <string name="re_enter_your_pass">Re-enter Your Password .....</string>
    <string name="type_your_task">Type your task .....</string>
    <string name="call_task">Call %1$s</string>
    <string name="phone_number_is">Phone number is:  %1$s </string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not Registered Yet? </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already Registered? </string>
    <string name="settings">Settings</string>
    <string name="adaptive_brightness">Adaptive Brightness</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="add_task">Add Task</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="item_1">Item 1</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task">Add new Task</string>
</resources>