<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SplashFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        app:cardCornerRadius="16dp"
        app:strokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Overlay View -->
        <View
            android:id="@+id/backgroundView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primaryColor"
            android:visibility="visible" />


        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular_protest_guerrilla"
            android:gravity="center_horizontal"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/btnNavBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/navigate_back"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <!--    specific for add task-->


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/textCardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeader">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/backgroundColor"
            android:hint="@string/task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"
                android:inputType="text"
                android:paddingTop="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textCardView"
        app:layout_constraintStart_toEndOf="@+id/textCardView"
        app:layout_constraintTop_toTopOf="@+id/textCardView">

        <ImageButton
            android:id="@+id/btnPickContact"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/primaryColor"
            android:contentDescription="@string/pick_contact"
            android:padding="4dp"
            android:src="@drawable/sharp_person_48" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView3"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/textCardView"
        app:layout_constraintStart_toStartOf="@id/textCardView"
        app:layout_constraintTop_toBottomOf="@+id/textCardView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pbAddTask"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnSaveTask"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveTask"
        app:layout_constraintTop_toTopOf="@+id/btnSaveTask" />

</androidx.constraintlayout.widget.ConstraintLayout>