<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SplashFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        app:cardCornerRadius="16dp"
        app:strokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Overlay View -->
        <View
            android:id="@+id/backgroundView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primaryColor"
            android:visibility="visible" />

        <!--        <View-->
        <!--            android:id="@+id/overlayView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:background="@color/overlayColor"-->
        <!--            android:visibility="visible" />-->

        <!-- App Name TextView -->
        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular_protest_guerrilla"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/btnNavBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/navigate_back"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <!--    specific for settings-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/adaptiveBrightnessCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeader">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/adaptiveBrightnessSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            android:text="@string/adaptive_brightness"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/darkModeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adaptiveBrightnessCard">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/darkModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"

            android:text="@string/dark_mode"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>